--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/chapathi.html">Chapathi</a>
-    <a href="recipes/roti.html">Roti</a>
+    <ul>
+      <li><a href="recipes/chapathi.html">Chapathi</a></li>
+      <li><a href="recipes/roti.html">Roti</a></li>
+    </ul>
   </body>
 </html>
